--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,10 @@ var WRInitTime=(new Date()).getTime();
 <!-- ClickTale end of Top part -->
 
 <div class="site">
+    <div class="title">
+        <a href="/">Home</a>
+        <!--<a class="extra" href="/">Home</a>-->
+    </div>
 
   {{ content }}
 
